# ESP32-BasiliskII

./: .gitignore  CHATGPT_CHANGES.md  PERF_WORKLOG.md  README.md  platformio.ini  screenshots.md
main/: CMakeLists.txt
src/: main.cpp
src/basilisk/: adb.cpp  audio.cpp  audio_esp32.cpp  boot_gui.cpp  cpu_profiler.cpp  driver_stubs.cpp  emul_op.cpp  ether.cpp  ether_esp32.cpp  input_esp32.cpp  main.cpp  main_esp32.cpp  net_router.cpp  opcode_sampler.cpp  opcode_sampler.h  prefs_esp32.cpp  sys_esp32.cpp  sysdeps.h  timer.cpp  video_esp32.cpp  xpram_esp32.cpp
src/basilisk/ESP32/: basilisk_glue.cpp  hw_esp32.cpp  main_esp32.cpp  prefs_esp32.cpp
src/basilisk/include/: boot_gui.h  main.h  video.h
src/basilisk/jit/: jit_cache.cpp  jit_cache.h  jit_compiler.cpp  jit_compiler.h  rv32_emitter.cpp  rv32_emitter.h
src/basilisk/uae_cpu/: basilisk_glue.cpp  cpu_emulation.h  memory.cpp  memory.h  newcpu.cpp  newcpu.h  readcpu.h  spcflags.h
tools/: performance_capture.py
